--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -104,7 +104,7 @@ body {
     margin-top: 5px;
 }
 
-.campo {
+.campo, .soumedico {
     font-weight: bolder;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(130, 130, 130);
@@ -203,6 +203,7 @@ body {
     display: block;
     margin-left: 200px;
     margin-right: auto;
+    margin-bottom: 20px;
 
 }
 
