Alterações para adequar ao uso de images

--- a/trabalho/clinica/templates/clinica/galeria.html
+++ b/trabalho/clinica/templates/clinica/galeria.html
@@ -30,20 +30,21 @@
                 <input type="radio" name="imagem" id="exame">
 
                 <div class="imagem s1">
-                    <img src="./images/logo.png" alt="logo">
+                    <img src="{% static 'images/logo.png' %}" alt="logo">
                 </div>
 
                 <div class="imagem">
-                    <img src="./images/recepcao.PNG" alt="recepcao">
+                    <img src="{% static 'images/recepcao.png' %}" alt="recepcao">
                 </div>
 
                 <div class="imagem">
-                    <img src="./images/consulta.PNG" alt="consulta">
+                    <img src="{% static 'images/consulta.png' %}" alt="consulta">
                 </div>
 
                 <div class="imagem">
-                    <img src="./images/exame.PNG" alt="exame">
+                    <img src="{% static 'images/exame.png'  %}" alt="exame">
                 </div>
+
             </div>
             <div class="navega-img">
                 <label class="bar-img" for="logo"></label>
