--- a/trabalho/clinica/templates/clinica/index.html
+++ b/trabalho/clinica/templates/clinica/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="dov">
-            <img src="./images/logo_menor.png" alt="logo_menor" width="200" />
+            <img src="{% static 'images/logo_menor.png' %}" alt="logo_menor" width="200">
         </div>
 
         <div class="infos">
