Criação salvamento de novo enderecos

--- a/trabalho/clinica/templates/clinica/novoendereco.html
+++ b/trabalho/clinica/templates/clinica/novoendereco.html
@@ -25,69 +25,36 @@
         </div>
 
         <div class="nvend">
-            <form>
+            <form method="POST">
+                {% csrf_token %}
                 <fieldset>
                     <div class="campo">
                         <label>CEP:</label>
-                        <input name="CEP" id="CEP" required pattern="\d{5}-\d{3}"/ required>
+                        <input name="cep" id="cep" type="text" value="{{cep}}">
                     </div>
 
                     <div class="campo">
                         <label>Logradouro:</label>
-                        <input type="text" required>
+                        <input name="logradouro" id="logradouro" type="text" value="{{logradouro}}">
                     </div>
                 </fieldset>
                 
                 <fieldset>
                     <div class="campo">
                         <label>Bairro:</label>
-                        <input type="text" required>
+                        <input name="bairro" id="bairro" type="text" value="{{bairro}}">
                     </div>
 
                     <div class="campo">
                         <label>Cidade:</label>
-                        <input type="text" required>
+                        <input name="cidade" id="cidade" type="text" value="{{cidade}}">
                     </div>
                 </fieldset>
 
                 <fieldset>
                     <div class="campo">
                         <label>Estado:</label>
-                        <select >
-                            <option selected disabled value="">Selecione o estado</option>
-                            <option value="AC">Acre</option>
-                            <option value="AL">Alagoas</option>
-                            <option value="AP">Amapá</option>
-                            <option value="AM">Amazonas</option>
-                            <option value="BA">Bahia</option>
-                            <option value="CE">Ceará</option>
-                            <option value="DF">Distrito Federal</option>
-                            <option value="ES">Espírito Santo</option>
-                            <option value="GO">Goiás</option>
-                            <option value="MA">Maranhão</option>
-                            <option value="MT">Mato Grosso</option>
-                            <option value="MS">Mato Grosso do Sul</option>
-                            <option value="MG">Minas Gerais</option>
-                            <option value="PA">Pará</option>
-                            <option value="PB">Paraíba</option>
-                            <option value="PR">Paraná</option>
-                            <option value="PE">Pernambuco</option>
-                            <option value="PI">Piauí</option>
-                            <option value="RJ">Rio de Janeiro</option>
-                            <option value="RN">Rio Grande do Norte</option>
-                            <option value="RS">Rio Grande do Sul</option>
-                            <option value="RO">Rondônia</option>
-                            <option value="RR">Roraima</option>
-                            <option value="SC">Santa Catarina</option>
-                            <option value="SP">São Paulo</option>
-                            <option value="SE">Sergipe</option>
-                            <option value="TO">Tocantins</option>
-                        </select>
-                    </div>
-
-                    <div class="campo">
-                        <label>Complemento (opcional)</label>
-                        <input type="text">
+                        <input name="estado" id="estado" type="text" value="{{estado}}">
                     </div>
                 </fieldset>
                 <button type="submit" class="botao">Cadastrar</button>
