--- a/trabalho/clinica/templates/clinica/novofuncionario.html
+++ b/trabalho/clinica/templates/clinica/novofuncionario.html
@@ -24,9 +24,7 @@
     </div>
 
     <div class="nvend">
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
+        <form>
             <fieldset>
                 <div class="campo">
                     <label>Nome:</label>
