--- a/trabalho/clinica/templates/clinica/novopaciente.html
+++ b/trabalho/clinica/templates/clinica/novopaciente.html
@@ -24,105 +24,72 @@
     </div>
 
     <div class="nvend">
-        <form>
+        <form method="POST">
+            {% csrf_token %}
             <fieldset>
                 <div class="campo">
                     <label>Nome:</label>
-                    <input type="text" name="nome" id="nome" required>
+                    <input name="nome" id="nome" type="text" value="{{nome}}">
                 </div>
 
                 <div class="campo">
                     <label>Email:</label>
-                    <input type="text" required>
+                    <input name="email" id="email" type="text" value="{{email}}">
                 </div>
             </fieldset>
 
             <fieldset>
                 <div class="campo">
                     <label>Telefone:</label>
-                    <input type="text" required>
+                    <input name="telefone" id="telefone" type="text" value="{{telefone}}">
                 </div>
 
                 <div class="campo">
                     <label>CEP:</label>
-                    <input name="CEP" id="CEP" required pattern="\d{5}-\d{3}"/ required>
+                    <input name="cep" id="cep" type="text" value="{{cep}}">
                 </div>
             </fieldset>
             
             <fieldset>
                 <div class="campo">
                     <label>Logradouro:</label>
-                    <input type="text" required>
+                    <input name="logradouro" id="logradouro" type="text" value="{{logradouro}}">
                 </div>
 
                 <div class="campo">
                     <label>Bairro:</label>
-                    <input type="text" required>
+                    <input name="bairro" id="bairro" type="text" value="{{bairro}}">
                 </div>
             </fieldset>
 
             <fieldset>
                 <div class="campo">
                     <label>Cidade:</label>
-                    <input type="text" required>
-                </div>
-
-                <div class="campo">
-                    <label>Complemeto (opcional):</label>
-                    <input type="text">
+                    <input name="cidade" id="cidade" type="text" value="{{cidade}}">
                 </div>
             </fieldset>
 
             <fieldset>
                 <div class="campo">
                     <label>Estado:</label>
-                    <select >
-                        <option selected disabled value="">Selecione o estado</option>
-                        <option value="AC">Acre</option>
-                        <option value="AL">Alagoas</option>
-                        <option value="AP">Amapá</option>
-                        <option value="AM">Amazonas</option>
-                        <option value="BA">Bahia</option>
-                        <option value="CE">Ceará</option>
-                        <option value="DF">Distrito Federal</option>
-                        <option value="ES">Espírito Santo</option>
-                        <option value="GO">Goiás</option>
-                        <option value="MA">Maranhão</option>
-                        <option value="MT">Mato Grosso</option>
-                        <option value="MS">Mato Grosso do Sul</option>
-                        <option value="MG">Minas Gerais</option>
-                        <option value="PA">Pará</option>
-                        <option value="PB">Paraíba</option>
-                        <option value="PR">Paraná</option>
-                        <option value="PE">Pernambuco</option>
-                        <option value="PI">Piauí</option>
-                        <option value="RJ">Rio de Janeiro</option>
-                        <option value="RN">Rio Grande do Norte</option>
-                        <option value="RS">Rio Grande do Sul</option>
-                        <option value="RO">Rondônia</option>
-                        <option value="RR">Roraima</option>
-                        <option value="SC">Santa Catarina</option>
-                        <option value="SP">São Paulo</option>
-                        <option value="SE">Sergipe</option>
-                        <option value="TO">Tocantins</option>
-                    </select>
+                    <input name="estado" id="estado" type="text" value="{{estado}}">
                 </div>
 
                 <div class="campo">
                     <label>Peso</label>
-                    <input type="date" required>
+                    <input name="peso" id="peso" type="number" step="0.01" value="{{peso}}">
                 </div>
             </fieldset>
 
             <fieldset>
                 <div class="campo">
                     <label>Altura:</label>
-                    <input type="text" required>
+                    <input name="altura" id="altura" type="number" step="0.01" value="{{altura}}">
                 </div>
 
                 <div class="campo">
                     <label>Tipo Sanguíneo:</label>
-                    <input type="text" required>
+                    <input name="tiposanguineo" id="tiposanguineo" type="text" value="{{tiposanguineo}}">
                 </div>
             </fieldset>
             
