--- a/trabalho/clinica/templates/clinica/entrar.html
+++ b/trabalho/clinica/templates/clinica/entrar.html
@@ -24,12 +24,12 @@
                 <fieldset>
                     <div class="email">
                         <label>E-mail:</label>
-                        <input id="email" name="email" type="text" required >
+                        <input name="email" id="email" type="text" value="{{email}}" required>
                     </div>
 
                     <div class="senha">
                         <label>Senha:</label>
-                        <input type="text" required>
+                        <input name="senha" id="senha" type="password" value="{{senha}}" required>
                     </div>
                 </fieldset>
                 <button type="submit" class="botao">Entrar</button>
