--- a/trabalho/clinica/templates/clinica/funcionarios.html
+++ b/trabalho/clinica/templates/clinica/funcionarios.html
@@ -16,6 +16,7 @@
             <li><a href="pacientes"><i class="fa-solid fa-user-injured"></i> Pacientes</a></li>
             <li><a href="enderecos"><i class="fa-solid fa-location-dot"></i>Endereços</a></li>
             <li><a href="todosagendamentos"><i class="fa-solid fa-clipboard-list"></i> Todos os Agendamentos</a></li>
+            <li><a href="prontuarios"><i class="fa-solid fa-stethoscope"></i> Prontuários</a></li>
             <li class="login"><a href="index"><i class="fa-solid fa-right-to-bracket"></i> Sair</a></li>
         </ul>
     </div>
