--- a/trabalho/clinica/templates/clinica/agendamento.html
+++ b/trabalho/clinica/templates/clinica/agendamento.html
@@ -56,6 +56,16 @@
                         <label>Horário:</label>
                         <select id="appointmentsHours">
                             <option selected disabled value="">Selecione o Horário da Consulta</option>
+                            <option value="8">08:00</option>
+                            <option value="9">09:00</option>
+                            <option value="10">10:00</option>
+                            <option value="11">11:00</option>
+                            <option value="12">12:00</option>
+                            <option value="13">13:00</option>
+                            <option value="14">14:00</option>
+                            <option value="15">15:00</option>
+                            <option value="16">16:00</option>
+                            <option value="17">17:00</option>
                         </select>
                     </div>
                 </fieldset>
