--- a/trabalho/clinica/templates/clinica/doctor_options.html
+++ b/trabalho/clinica/templates/clinica/doctor_options.html
@@ -1,3 +1,3 @@
 {% for doctor in doctors %}
-  <option value="{{ doctor.codigo }}">{{ doctor.codigo }}</option>
+  <option value="{{ doctor.crm }}">{{ doctor.codigo }}</option>
 {% endfor %}
